# np-epid

./: .env  .gitignore  README.md  config.yaml  conftest.py  environment.yml  pyproject.toml  run.py  save_posterior_sample.py  test_crkp.py  test_het.py  test_sim.py
configs/: config.yaml
configs/model/: flow.yaml  gdn.yaml  rnn.yaml  summ.yaml  tf.yaml
notebooks/: 00_presentation_graphics.ipynb  01_likelihood-based.ipynb  02_si_sim.ipynb  03_si_sim_het.ipynb  04_si_sim-partial.ipynb  05_census_to_trace.ipynb  06_census_to_trace.ipynb  06_crkp_preprocess.ipynb  07_crkp_explore.ipynb  07_crkp_preprocess.ipynb  08_crkp_sampling_frame.ipynb  09_crkp_results.ipynb  10_crkp_mcmc.ipynb  10_genomics.ipynb  11_genomics.ipynb  11_two_moons.ipynb  13_crkp_partial.ipynb  13_phylo_sim.ipynb  13_phylosim_preprocess.ipynb  14_phylosim.ipynb  15_phylosim.ipynb  abc.ipynb  abc_toy.ipynb  bayes_linreg.ipynb  census_to_trace.ipynb  crkp_explore.ipynb  crkp_preprocess.ipynb  crkp_results.ipynb  crkp_sampling_frame.ipynb  crkp_simulator.ipynb  crkp_simulator_abc.ipynb  crkp_simulator_test.ipynb  data_exploration.ipynb  digest_multiruns.ipynb  explore_multirun.ipynb  likelihood-based.ipynb  normal-normal.ipynb  npe_toy.ipynb  preprocess.ipynb  sandbox.ipynb  (+15 more)
scripts/: rejection_sample.py
sim_data/: cluster_lookup.csv  facility_trace.csv  floor_trace.csv  room_trace.csv  screening.csv
src/: approx_bc.py  crkp_simulator.py  dataset.py  flow.py  model.py  rejection_sample.py  simulator.py  utils.py
tests/: test_crkp.py  test_flows.py  test_gdn.py  test_sim_abc.py  test_sim_npe.py
(+23 files in other folders)
