[tool.poetry]
name = "crkp"
version = "0.1.0"
description = "Neural posterior estimation for simulation-based inference in transmission modeling"
authors = ["chathasphere <pgchatha@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
scipy = "^1.11.4"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
hydra-core = "^1.3.2"
# lightning = "^2.1.3"
wandb = "^0.16.1"
seaborn = "^0.13.1"
openpyxl = "^3.1.2"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
